# driverless_pipeline_ros

install/: local_setup.sh  setup.sh
install/my_custom_msgs/share/my_custom_msgs/: package.bash  package.zsh
install/my_detection_package/lib/my_detection_package/: camera_node  cone_detection_node  display_node  slam_node  yolo_node
install/my_detection_package/share/my_detection_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera/share/realsense2_camera/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  realsense2_cameraConfig-version.cmake  realsense2_cameraConfig.cmake
install/realsense2_camera/share/realsense2_camera/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/realsense2_camera/share/realsense2_camera/launch/: default.rviz  rs_intra_process_demo_launch.py  rs_launch.py  rs_multi_camera_launch.py
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  realsense2_camera_msgsConfig-version.cmake  realsense2_camera_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/realsense2_camera_msgs/share/realsense2_camera_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/msg/: Extrinsics.idl  Extrinsics.msg  IMUInfo.idl  IMUInfo.msg  Metadata.idl  Metadata.msg  RGBD.idl  RGBD.msg
install/realsense2_camera_msgs/share/realsense2_camera_msgs/srv/: DeviceInfo.idl  DeviceInfo.srv  DeviceInfo_Request.msg  DeviceInfo_Response.msg
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/environment/: ament_prefix_path.dsv  (+1 more)
log/: latest_build
src/my_custom_msgs/: CMakeLists.txt  package.xml
src/my_custom_msgs/msg/: Cone.msg  ConeArray.msg
src/my_detection_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_detection_package/launch/: camera_yolo_cone_display_launch.py  detection.launch.py
src/my_detection_package/my_detection_package/: camera_node.py  cone_detection_node.py  display_node.py  slam_node.py  yolo_node.py
(+138 files in other folders)
