<?xml version="1.0"?>
<package format="3">
  <name>my_detection_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nitins.ojasracing@gmail.com">teamojasdv</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pyrealsense2</depend>
  <depend>ultralytics</depend>
  <depend>perception_msgs</depend> <!-- Add this line for your perception_msgs dependency -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>

